[gd_scene load_steps=9 format=3 uid="uid://cckokj5ng7qv7"]

[ext_resource type="Script" path="res://RunePicking/Main/rp_artifact_management.gd" id="1_d567i"]
[ext_resource type="PackedScene" uid="uid://cmu55wa7rg65d" path="res://RunePicking/Main/rp_commission_list.tscn" id="1_ewpkt"]
[ext_resource type="Script" path="res://CommissionPapers/commissions.gd" id="2_3plqe"]
[ext_resource type="Resource" uid="uid://byddgojmeg7wo" path="res://CommissionPapers/test_com3.tres" id="3_a5elq"]
[ext_resource type="Resource" uid="uid://c37j3l7qey5rd" path="res://CommissionPapers/test_com2.tres" id="4_krj2k"]
[ext_resource type="PackedScene" uid="uid://d4cokkpqjlna8" path="res://RunePicking/Main/rp_lab.tscn" id="4_kylpi"]
[ext_resource type="Resource" uid="uid://ddyxl7s820qer" path="res://CommissionPapers/test_com1.tres" id="5_kpsn2"]
[ext_resource type="PackedScene" uid="uid://q00ea1q364xo" path="res://RunePicking/Main/rp_actions_display.tscn" id="7_qfvi3"]

[node name="RunePicking" type="Node"]
script = ExtResource("1_d567i")
full_commission_list = Array[ExtResource("2_3plqe")]([ExtResource("5_kpsn2"), ExtResource("4_krj2k"), ExtResource("3_a5elq")])

[node name="Bottom UI" type="Control" parent="."]
layout_mode = 3
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Ensure scale well" type="ColorRect" parent="Bottom UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxOfUI" type="HBoxContainer" parent="Bottom UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Bottom UI/HBoxOfUI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Bottom UI/HBoxOfUI/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Bottom UI/HBoxOfUI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Bottom UI/HBoxOfUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StaminaInfo" type="RichTextLabel" parent="Bottom UI/HBoxOfUI/PanelContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = "Stamina"
scroll_active = false

[node name="PanelContainer2" type="PanelContainer" parent="Bottom UI/HBoxOfUI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StaminaInfo2" type="RichTextLabel" parent="Bottom UI/HBoxOfUI/PanelContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
text = "Stamina_value"
scroll_active = false

[node name="RpCommissionList" parent="Bottom UI/HBoxOfUI" instance=ExtResource("1_ewpkt")]
layout_mode = 2

[node name="RpActionsDisplay" parent="Bottom UI/HBoxOfUI" instance=ExtResource("7_qfvi3")]
layout_mode = 2

[node name="TestRemoveButton" type="Button" parent="Bottom UI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Test remove artifact button"

[node name="Lab" parent="." instance=ExtResource("4_kylpi")]

[connection signal="pressed" from="Bottom UI/TestRemoveButton" to="." method="_on_test_remove_button_pressed"]
